--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -11,7 +11,6 @@ Text Domain: mutantcity
 $fa-font-path: "assets/fonts";
 
 @charset "utf-8";
-@import 'node_modules/reset-css/sass/reset';
 @import "node_modules/bulma/bulma";
 @import "node_modules/font-awesome/scss/font-awesome";
 @import url('https://fonts.googleapis.com/css?family=Special+Elite');
@@ -79,6 +78,7 @@ hr {
   line-height: 1.6em;
 }
 
+// remove hard-reset of elements in the single post block
 .single-post ul {
   display: block;
   list-style-type: disc;
