--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -81,6 +81,6 @@ hr {
 
 // remove hard-reset of elements in the single post block
 
-.single-post {
+.single-post-content {
   @import 'default-styles';
 }
