--- a/style.css
+++ b/style.css
@@ -9075,8 +9075,6 @@ hr {
     margin-left: 40px; }
   .single-post-content ol {
     list-style-type: decimal; }
-  .single-post-content ul {
-    list-style-type: disc; }
   .single-post-content ol ul, .single-post-content ul ol,
   .single-post-content ul ul, .single-post-content ol ol {
     margin-top: 0;
@@ -9112,3 +9110,13 @@ hr {
       page-break-after: avoid; }
     .single-post-content ul, .single-post-content ol, .single-post-content dl {
       page-break-before: avoid; } }
+  .single-post-content ul li {
+    list-style-type: none;
+    position: relative;
+    padding-left: 8px; }
+  .single-post-content ul li:before {
+    content: "\25BA \0020";
+    font-size: 10px;
+    position: absolute;
+    top: -1px;
+    left: -8px; }
